--- a/task2/.env.example
+++ b/task2/.env.example
@@ -1,6 +1,6 @@
 BOT_TOKEN=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_PORT=
-DB_HOST=
+DB_USER=test
+DB_PASSWORD=test
+DB_NAME=test
+DB_PORT=5432
+DB_HOST=db
